# CrewAI

./: .env.example  .gitignore  MULTIPAGE_DOCS.md  README.md  README_MULTIPAGE.md  app.py  linkedin_job_search_generator.py  linkedin_search_links_20251007_161217.csv  linkedin_searches_structured_20251007_161217.json  linkedin_usage_guide_Chinese.md  pyproject.toml  quick_linkedin_links.py  test.py  test_full.py  test_simple.py
Test-Example/: test_full.py
data/: user_resume.txt
files/: LinkedIn_JobSearch_data-science_ai-engineer_pa_ca_20251006_164846.csv  LinkedIn_SearchLinks_Structured_data-science_ai-engineer_pa_ca_20251006_164846.json  LinkedIn_SearchSummary_data-science_ai-engineer_pa_ca_20251006_164846.txt  linkedin_job_search_links_20251015_174428.csv  linkedin_searches_structured_20251015_174428.json
single-agent/: README.md  cli_runner.py  compare_results.py  single.py
src/: __init__.py  app.py  crew.py  main.py  onet_get.py  research.py  research_crew.py  run_demo.py  utils.py
src/Crew/: __init__.py  crew.py  crew_factory.py  linkedin_search_crew.py  research_crew.py
src/Tools/: BrowserTools.py  LinkedInJobSearchTool.py  __init__.py  workflow_controller.py
src/coaches/: interview_coach.py  resume_coach.py
src/config/: agents.yaml  linkedin_agents.yaml  linkedin_tasks.yaml  research_agents.yaml  research_tasks.yaml  tasks.yaml
src/data/: sample_job_data.json  user_resume.txt  user_sessions.json
src/docker/: Dockerfile  README.md  docker-compose.yml
src/job_ranker/: __init__.py  job_fit_ranker.py  ranking_integration.py
(+60 files in other folders)
